package relay;

message ProvisioningUuid {
 optional string uuid = 1;
}


message ProvisionEnvelope {
  optional bytes publicKey = 1;
  optional bytes body      = 2; // Encrypted ProvisionMessage
}

message ProvisionMessage {
  optional bytes  identityKeyPrivate = 2;
  optional string addr               = 3;
  optional string provisioningCode   = 4;
  optional string userAgent          = 5;
}
